--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js Restful CRUD API with Node.JS, Express and MongoDB",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
